<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aluno.trabalhinho.Calculadora2Grau"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Valor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtValor1"
            android:layout_alignBottom="@+id/edtValor1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:text="@string/txtValor1a" />

        <EditText
            android:id="@+id/edtValor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Valor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:text="@string/txtValor2b" />

        <EditText
            android:id="@+id/edtValor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtValor1"
            android:layout_below="@+id/edtValor1"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtValor3"
            android:layout_alignBottom="@+id/edtValor3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:text="@string/txtValor3c" />

        <EditText
            android:id="@+id/edtValor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtValor2"
            android:layout_below="@+id/edtValor2"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView9"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/txtDelta" />

        <TextView
            android:id="@+id/txtResultDelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_marginStart="19dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/textView9"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtResultX1"
            android:layout_alignBottom="@+id/txtResultX1"
            android:layout_alignEnd="@+id/textView16"
            android:layout_marginTop="12dp"
            android:layout_marginStart="32dp"
            android:text="@string/txtX1" />

        <TextView
            android:id="@+id/txtResultX1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtResultDelta"
            android:layout_below="@+id/txtResultDelta"
            android:layout_marginStart="19dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnCalcular"
            android:layout_alignBottom="@+id/btnCalcular"
            android:layout_alignStart="@+id/textView13"
            android:layout_marginStart="32dp"
            android:text="@string/txtX2" />

        <TextView
            android:id="@+id/txtResultX2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView12"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignStart="@+id/txtResultX1"
            android:layout_marginStart="19dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtValor3"
            android:layout_below="@+id/txtResultDelta"
            android:layout_marginTop="29dp"
            android:layout_marginRight="12dp"
            android:paddingStart="20dp"
            android:text="@string/btnCalcular" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="254dp">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnVoltar"
            android:layout_marginBottom="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp" />
    </RelativeLayout>

</LinearLayout>
