<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.trabalhinho.CalculadoraSimples"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/edtValor2"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/txtValor1" />

                <EditText
                    android:id="@+id/edtValor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/edtValor2"
                    android:layout_alignStart="@+id/textView4"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/txtValor2" />

                <EditText
                    android:id="@+id/edtValor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/edtValor1"
                    android:layout_below="@+id/edtValor1"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/txtOperacoes" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnSomar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/textView6"
                        android:layout_alignStart="@+id/textView6"
                        android:layout_below="@+id/textView6"
                        android:layout_weight="1"
                        android:text="@string/btnSomar" />

                    <Button
                        android:id="@+id/btnSubtrair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btnSomar"
                        android:layout_alignBottom="@+id/btnSomar"
                        android:layout_toStartOf="@+id/btnMultiplicar"
                        android:layout_weight="1"
                        android:text="@string/btnSubtrair" />

                    <Button
                        android:id="@+id/btnMultiplicar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/textView7"
                        android:layout_toEndOf="@+id/textView7"
                        android:layout_weight="1"
                        android:text="@string/btnMultiplicacao" />

                    <Button
                        android:id="@+id/btnDividir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/btnMultiplicar"
                        android:layout_toEndOf="@+id/btnMultiplicar"
                        android:layout_weight="1"
                        android:text="@string/btnDivisao" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSubtrair"
                    android:layout_marginStart="16dp"
                    android:text="@string/txtResultado" />

                <TextView
                    android:id="@+id/txtResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView7"
                    android:layout_alignBottom="@+id/textView7"
                    android:layout_alignStart="@+id/btnMultiplicar"
                    android:layout_marginStart="16dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView6"
                android:layout_marginBottom="21dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:text="Voltar" />

        </LinearLayout>

</LinearLayout>
